fix performance issues

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <link rel="icon" type="image/png" href="/images/avatar.png" />
       
       <!-- Open Graph for social sharing -->
-      <meta property="og:title" content="Farib Mojahir Jonak - UI/UX Designer" />
+      <meta property="og:title" content="Farib Mojahir Jonak" />
       <meta property="og:description" content="User Research Specialist creating intuitive and engaging digital experiences through user-centered design." />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://faribmojahir.com" />
